libstream-perl (0.9.4) unstable; urgency=low

  * File::In->lag

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Tue, 22 Feb 2011 19:40:13 +0300

libstream-perl (0.9.3) unstable; urgency=low

  * Stream::Catalog::Plugin::File - correctly handle cross-namespace name
    collisions

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 27 Oct 2010 20:41:41 +0400

libstream-perl (0.9.2) unstable; urgency=low

  * Stream::File::Cursor: reassociation with new file causes warn instead of
    croak

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 21 Oct 2010 00:17:31 +0400

libstream-perl (0.9.1) unstable; urgency=low

  * Stream::File: don't break posfile when commiting after reading incomplete
    line

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 01 Sep 2010 16:40:29 +0400

libstream-perl (0.9.0) unstable; urgency=low

  * 'does' method in Stream::Base - not Moose yet, but at least we'll get roles
  * Stream::Mixin::Filterable renamed to Stream::In::Role::Filterable,
    Stream::Mixin::Lag renamed to Stream::In::Role::Lag,
    Stream::Mixin::Shift renamed to Stream::In::Role::Shift
  * Stream::Storage::Role::ClientList role
  * Stream::File implements ClientList role

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 16 Aug 2010 18:16:28 +0400

libstream-perl (0.8.6) unstable; urgency=low

  * syswrite in Stream::File

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 09 Aug 2010 18:46:01 +0400

libstream-perl (0.8.5) unstable; urgency=low

  * fix an empty commit issue in File and Log streams

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Wed, 21 Jul 2010 20:29:54 +0400

libstream-perl (0.8.4) unstable; urgency=low

  * fix race condition in Stream::Log 

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Wed, 21 Jul 2010 17:56:56 +0400

libstream-perl (0.8.3) unstable; urgency=low

  * bugfix: Stream::DB::In is an input straem